  options are handled as a piece of normal document state, and thus
  passed to workers, etc... As a consequence, the field
  `Goptions.optsync` has been removed.

In Coqlib / reference location:

  We have removed from Coqlib functions returning `constr` from
  names. Now it is only possible to obtain references, that must be
  processed wrt the particular needs of the client.

  Users of `coq_constant/gen_constant` can do
  `Universes.constr_of_global (find_reference dir r)` _however_ note
  the warnings in the `Universes.constr_of_global` in the
  documentation. It is very likely that you were previously suffering
  from problems with polymorphic universes due to using
  `Coqlib.coq_constant` that used to do this.

** Tactic API **

- pf_constr_of_global now returns a tactic instead of taking a continuation.
  Thus it only generates one instance of the global reference, and it is the
  caller's responsibility to perform a focus on the goal.

- The tclWEAK_PROGRESS and tclNOTSAMEGOAL tacticals were removed. Their usecase
  was very specific. Use tclPROGRESS instead.

** Ltac API **

Many Ltac specific API has been moved in its own ltac/ folder. Amongst other
important things:

- Pcoq.Tactic -> Pltac
- Constrarg.wit_tactic -> Tacarg.wit_tactic
- Constrarg.wit_ltac -> Tacarg.wit_ltac
- API below ltac/ that accepted a *_tactic_expr now accept a *_generic_argument
  instead
- Some printing functions were moved from Pptactic to Pputils
- A part of Tacexpr has been moved to Tactypes
- The TacFun tactic expression constructor now takes a `Name.t list` for the 
  variable list rather than an `Id.t option list`.

The folder itself has been turned into a plugin. This does not change much,
but because it is a packed plugin, it may wreak havoc for third-party plugins
depending on any module defined in the ltac/ directory. Namely, even if
everything looks OK at compile time, a plugin can fail to load at link time